--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,41 +1,39 @@
-# 워크플로우 이름 (GitHub Actions 탭에서 표시됨)
-name: Deploy to server on main merge
+name: Deploy homepage on tag push
 
-# 실행 조건: main 브랜치에 push될 때 실행됨
 on:
   push:
-    branches:
-      - main  # dev → main merge된 후 main 브랜치에 push 발생 시 자동 실행
+    tags:
+      - 'v*'  # v로 시작하는 태그가 푸시될 때만 실행됨
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest  # GitHub에서 제공하는 Ubuntu 가상환경에서 실행
+    runs-on: ubuntu-latest
 
     steps:
-    # 1단계: 현재 레포지토리의 코드를 체크아웃 (clone)
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    # 2단계: 도커 허브 로그인
-    - name: Docker Login
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+      - name: Extract tag version
+        id: extract_tag
+        run: echo "TAG=${GITHUB_REF##*/}" >> $GITHUB_OUTPUT
 
-    # 3단계: 도커 이미지 빌드
-    - name: Build Docker Image
-      run: docker build -t devjm95/homepage-namoo:250714 .
+      - name: Docker Login
+        run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-    # 4단계: 도커 이미지 푸시
-    - name: Push Docker Image
-      run: docker push devjm95/homepage-namoo:latest
+      - name: Build Docker image
+        run: docker build -t homepage-namoo:${{ steps.extract_tag.outputs.TAG }} .
 
-    # 5단계: SSH로 서버에 접속해서 배포 실행
-    - name: SSH & Deploy on Server
-      uses: appleboy/ssh-action@v0.1.10
-      with:
-        host: ${{ secrets.SERVER_HOST }}          # 서버 공인 IP
-        username: ${{ secrets.SERVER_USER }}      # 서버 유저명 (ex. ubuntu)
-        key: ${{ secrets.SERVER_SSH_KEY }}        # .pem 파일 내용 전체가 포함된 Secret
-        port: 32111
-        script: |
-          docker pull devjm95/homepage-namoo:latest  # 최신 이미지 pull
-          docker-compose -f /home/ubuntu/docker-compose.yml up -d  # 컨테이너 재시작 (배포)
+      - name: Push Docker image
+        run: docker push homepage-namoo:${{ steps.extract_tag.outputs.TAG }}
+
+      - name: SSH & Deploy on Server
+        uses: appleboy/ssh-action@v0.1.10
+        with:
+          host: ${{ secrets.SERVER_HOST }}
+          username: ${{ secrets.SERVER_USER }}
+          key: ${{ secrets.SERVER_SSH_KEY }}
+          port: 32111
+          script: |
+            docker pull homepage-namoo:${{ steps.extract_tag.outputs.TAG }}
+            docker tag homepage-namoo:${{ steps.extract_tag.outputs.TAG }} homepage-namoo:latest
+            docker-compose -f /home/ubuntu/docker-compose.yml up -d
