--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
           port: 32111
           script: |
             docker pull homepage-namoo:latest
-            docker-compose -f /home/ubuntu/docker-compose.yml up -d
+            docker-compose -f /home/homepage/www.namooinc.com/docker-compose.yml up -d
