--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,5 +46,6 @@ jobs:
           port: 32111
           script: |
             echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u rhistle-official --password-stdin
+            echo "NEXT_PUBLIC_KAKAO_MAP_KEY=${{ secrets.KAKAO_MAP_KEY }}" > .env
             docker pull ghcr.io/rhistle-official/homepage-namoo:latest
             docker-compose -f /home/homepage/www.namooinc.com/docker-compose.yml up -d --remove-orphans
