chore: deploy.yml .env 경로 설정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,5 @@ jobs:
           port: 32111
           script: |
             echo ${{ secrets.GHCR_TOKEN }} | docker login ghcr.io -u rhistle-official --password-stdin
-            echo "NEXT_PUBLIC_KAKAO_MAP_KEY=${{ secrets.KAKAO_MAP_KEY }}" > .env
-            docker pull ghcr.io/rhistle-official/homepage-namoo:latest
+            echo "NEXT_PUBLIC_KAKAO_MAP_KEY=${{ secrets.KAKAO_MAP_KEY }}" > /home/homepage/www.namooinc.com/.env
             docker-compose -f /home/homepage/www.namooinc.com/docker-compose.yml up -d --remove-orphans
