--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,17 +23,16 @@ jobs:
       - name: Login to GitHub Container Registry
         run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
 
-      - name: Create .env file for build
-        run: |
-          echo "NEXT_PUBLIC_KAKAO_MAP_KEY=${{ secrets.KAKAO_MAP_KEY }}" > .env
-          echo "ADMIN_ID=${{ secrets.ADMIN_ID }}" >> .env
-          echo "ADMIN_PW=${{ secrets.ADMIN_PW }}" >> .env
-
       - name: Ensure .env is part of Docker context
         run: ls -al .env  # 디버깅용 (선택)
 
       - name: Build Docker image
-        run: docker build -t ghcr.io/rhistle-official/homepage-namoo:${{ steps.extract_tag.outputs.TAG }} .
+        run: |
+          docker build \
+          --build-arg NEXT_PUBLIC_KAKAO_MAP_KEY=${{ secrets.KAKAO_MAP_KEY }} \
+          --build-arg ADMIN_ID=${{ secrets.ADMIN_ID }} \
+          --build-arg ADMIN_PW=${{ secrets.ADMIN_PW }} \
+          -t ghcr.io/rhistle-official/homepage-namoo:${{ steps.extract_tag.outputs.TAG }} .
 
       - name: Tag image as latest
         run: docker tag ghcr.io/rhistle-official/homepage-namoo:${{ steps.extract_tag.outputs.TAG }} ghcr.io/rhistle-official/homepage-namoo:latest
