feat: 문의 시 회사 이메일로 수신되도록 기능 추가

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "motion": "^12.7.4",
     "next": "^15.3.1",
     "next-intl": "^4.0.2",
-    "nodemailer": "^7.0.4",
+    "nodemailer": "^7.0.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.55.0",
@@ -47,6 +47,7 @@
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "prettier": "3.5.3",
