chore: 서버 경로 이동에 따른 설정 변경

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -70,8 +70,8 @@ jobs:
 
             docker rm -f $CONTAINER_NAME || true
 
-            docker-compose -f /home/***/www.***.com/docker-compose.yml pull
-            docker-compose -f /home/homepage/www.namooinc.com/docker-compose.yml up -d --remove-orphans
+            docker-compose -f /namooinc/web/www/docker-compose.yml pull
+            docker-compose -f /namooinc/web/www/docker-compose.yml up -d --remove-orphans
 
             sleep 7
 
