--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -71,8 +71,8 @@ jobs:
 
             docker rm -f $CONTAINER_NAME || true
 
-            docker-compose -f /namooinc/web/www/docker-compose.yml pull
-            docker-compose -f /namooinc/web/www/docker-compose.yml up -d --remove-orphans
+            docker compose -f /namooinc/web/www/docker-compose.yml pull
+            docker compose -f /namooinc/web/www/docker-compose.yml up -d --remove-orphans
 
             sleep 7
 
