--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,62 +60,59 @@ jobs:
           passphrase: ${{ secrets.SSH_PASSPHRASE }}
           port: 32111
           script: |
-            # 안전 모드: 에러 즉시 중단 + 파이프라인 실패 전파
+            # 안전 모드: 에러 즉시 중단
             set -euxo pipefail
             
             CONTAINER_NAME=www-namoo
             BACKUP_IMAGE=${CONTAINER_NAME}:backup
-
+            
             # 0) 환경 고정
             export PATH="/usr/local/bin:/usr/bin:$PATH"       # docker/compose 경로 보정
-            unset DOCKER_HOST || true                          #  컨텍스트 방지
+            unset DOCKER_HOST || true                         # 엉뚱한 컨텍스트 방지
             docker context use default
-            export COMPOSE_PROJECT_NAME=www-namoo                    # 컨테이너 네이밍 일관성
-
+            export COMPOSE_PROJECT_NAME=www-namoo             # 컨테이너 네이밍 일관성
+            
             # 1) 경로 이동
-            cd /namooinc/web/www                               # compose 파일 위치
-
-            # 2) GHCR 로그인 (토큰 소유자와 -u 일치 중요)
+            cd /namooinc/web/www                              # compose 파일 위치
+            
+            # 2) GHCR 로그인
             echo "${{ secrets.GHCR_TOKEN }}" | docker login ghcr.io -u rhistle-official --password-stdin
-
-            # 3) 현재 서비스 컨테이너 ID 조회(하드코딩 이름 지양)
-            SERVICE=www                                        # compose의 서비스명
-            CID="$(docker compose ps -q "$SERVICE" || true)"   # 실제 컨테이너 ID (없으면 빈 값)
-
-            # 4) 백업 이미지 커밋(있을 때만)
+            
+            # 3) 현재 서비스 컨테이너 ID 조회
+            SERVICE=www-namoo                                 # compose의 서비스명
+            CID="$(docker compose ps -q "$SERVICE" || true)"  # 실제 컨테이너 ID (없으면 빈 값)
+            
+            # 4) 백업 이미지 커밋
             if [ -n "$CID" ]; then
               BACKUP_IMAGE="${COMPOSE_PROJECT_NAME}-${SERVICE}:backup"  # 로컬 태그명
               docker commit "$CID" "$BACKUP_IMAGE"                      # 롤백용 스냅샷 생성
             fi
-
+            
             # 5) 최신 이미지 pull
             docker compose -f docker-compose.yml pull
-
+            
             # 6) 기동
             docker compose -f docker-compose.yml up -d --remove-orphans
-
-            # 7) 준비될 때까지 대기
-            HEALTH_URL="http://localhost:3000/ko"
-            RETRIES=12
-            until curl -fsS "$HEALTH_URL" >/dev/null 2>&1; do  # 준비 완료까지 재시도
-              ((RETRIES--)) || break
-              sleep 5
-            done
-
+            
+            # 7) 내부 헬스체크, 컨테이너 내부 127.0.0.1 검사
+            #    -L: 리다이렉트 대비, -sS: 조용히/에러는 표시
+            CID="$(docker compose ps -q "$SERVICE")"          # 새로 뜬 컨테이너 ID 재조회
+            RETRIES=24                                        # 최대 2분 대기
+            SLEEP=5
+                        
             # 7-1) 실패 시 롤백
             if [ "$RETRIES" -le 0 ]; then
               echo "healthcheck failed → rollback start"
               if [ -n "${BACKUP_IMAGE:-}" ]; then
                 # 새 스택 중지
                 docker compose -f docker-compose.yml down || true
-                # 간단 롤백 컨테이너 가동(포트/프록시에 맞게 조정)
-                # 주의: 프록시 사용 중이면 -p 매핑이 불필요할 수 있음. 환경에 맞게 수정.
+                # 기존 롤백 컨테이너 정리 후 기동
                 docker rm -f "${COMPOSE_PROJECT_NAME}-${SERVICE}-rollback" || true
                 docker run -d --name "${COMPOSE_PROJECT_NAME}-${SERVICE}-rollback" -p 3000:3000 "$BACKUP_IMAGE" || true
               fi
               exit 1
             fi
-
+            
             # 8) 성공 → 백업 이미지 정리(공간 회수)
             if [ -n "${BACKUP_IMAGE:-}" ]; then
               docker image rm "$BACKUP_IMAGE" || true
